--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data Science Research</title>
+</head>
+
+<body>
+
+    <header>
+        <h1>Data Science Research: Title of Your Research</h1>
+    </header>
+
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>This section introduces the topic of your research and provides background information.</p>
+    </section>
+
+    <section id="data">
+        <h2>Data</h2>
+        <p>Describe the dataset(s) you used in your research and where they were obtained from.</p>
+    </section>
+
+    <section id="eda">
+        <h2>Exploratory Data Analysis (EDA)</h2>
+        <p>Discuss the exploratory data analysis techniques you applied to understand the dataset better.</p>
+    </section>
+
+    <section id="preprocessing">
+        <h2>Data Preprocessing</h2>
+        <p>Explain the preprocessing steps you took to clean and prepare the data for modeling.</p>
+    </section>
+
+    <section id="modeling">
+        <h2>Modeling</h2>
+        <p>Describe the machine learning or statistical models you used in your research.</p>
+    </section>
+
+    <section id="evaluation">
+        <h2>Evaluation</h2>
+        <p>Present the evaluation metrics and techniques used to assess the performance of your models.</p>
+    </section>
+
+    <section id="conclusion">
+        <h2>Conclusion</h2>
+        <p>Summarize your findings and discuss the implications of your research.</p>
+    </section>
+
+    <footer>
+        <p>© 2024 Your Name. All rights reserved.</p>
+    </footer>
+
+</body>
+
+</html>
