--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
     <section id="introduction">
         <h2>Introduction</h2>
-        <p>This section introduces the topic of your research and provides background information.</p>
+        <p>Soccer, for many of us, is not merely a sport; it's a passion deeply ingrained since childhood.
+            From the exhilarating matches on the field to the virtual battles in FIFA on PlayStations, our love for soccer has been a constant companion throughout our lives. 
+            It's this profound connection to the beautiful game that fuels our enthusiasm for delving into its intricacies through data analysis.
+            As avid players and followers of soccer, we've often found ourselves immersed in debates over player positions and roles. 
+            With questions arising like What makes a striker unstoppable? Why does a midfielder dominate the field?
+            During the late-night FIFA battles with friends, sometimes experimenting with unconventional player placements led to surprising outcomes, unveiling the strategic nuances of the game.
+            Driven by this curiosity and with the European Soccer database, we saw an opportunity to put into application the learnings of CMSC320 class. 
+            In this research endeavor, we aim to predict the position of a soccer player, leveraging the player-attributes encapsulated in the dataset, thus sheding light on the intricate dynamics of player roles in soccer.</p>
     </section>
 
     <section id="data">
