--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>Data Science Research: Predictive Modeling of Soccer Player's Positions based on Attributes</h1>
+        <h1>Rating Fusion: A Predictive Model for Soccer Player Performance"</h1>
     </header>
 
     <section id="introduction">
