--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Data processing is a vital step in preparing the dataset for analysis. In our research, we begin by extracting relevant information from two key SQL tables: the "Player" table and the "Player Attributes" table. The "Player" table provides essential details such as player names, unique IDs, birthdays, and physical attributes like height and weight. On the other hand, the "Player Attributes" table contains specific performance ratings for various attributes, crucial for our analysis in predicting player positions. 
             To streamline our dataset, we merge the datasets of these two tables using the merge function from the pandas library, enabling us to combine pertinent information about each player into a single coherent dataset. Following the merge, we embark on basic data cleaning procedures. This involves removing redundant columns, such as duplicate entries for the same player, ensuring data integrity and accuracy. 
             Additionally, we calculate player ages from their birthdates, a more actionable metric for our analysis. By processing the data in this manner, we lay a solid foundation for subsequent</p>
-        <iframe src="colab/DataProcessing.html" width="100%" height="600px" frameborder="0"></iframe>
+        <iframe src="https://github.com/shashanksp04/CMSC320_FINAL_PROJECT/blob/main/colab/DataProcessing.html" width="100%" height="600px" frameborder="0"></iframe>
     </section>
 
     <section id="eda">
