--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
              This hypothesis was formulated with a null hypothesis (HO) suggesting no direct influence, countered by an alternative hypothesis (HA) positing the opposite. 
              Based on the very low p-value we concluded that 'athleticism' has an influence on the overall rating of a player.
             </p>
-            <iframe src="https://github.com/shashanksp04/CMSC320_FINAL_PROJECT/blob/main/colab/EDA_Hyp1.html" width="100%" height="600px" frameborder="0"></iframe>
+            <iframe src="EDA_Hyp1.html" width="100%" height="600px" frameborder="0"></iframe>
         </section>
         <section id="hyp2">
             <h3>Hypothesis-2</h3>
             <p>Our next hypothesis delved into the relationship between a player's foot preference and their overall rating. Here, the null hypothesis (HO) posited no significant effect of foot preference on overall rating, contrasting with the alternative hypothesis (HA) proposing a notable influence. 
                 Our p-value for this hypothesis was very high suggesting that foot preference has no significant effect on the overall rating on a player.
             </p>
-            <iframe src="https://github.com/shashanksp04/CMSC320_FINAL_PROJECT/blob/main/colab/EDA_Hyp2.html" width="100%" height="600px" frameborder="0"></iframe>
+            <iframe src="EDA_Hyp2.html" width="100%" height="600px" frameborder="0"></iframe>
         </section>
         <section id="hyp3">
             <h3>Hypothesis-3</h3>
             <p>Our last hypothesis ventured into the combined effects of age, height, and weight on a player's overall rating. Within this hypothesis, the null hypothesis (HO) suggested a collective impact of these variables on the overall rating, while the alternative hypothesis (HA) contested such an effect. 
                 With a very-low p-value we rejected the null hypothesis and moved forward with the alternative hypothesis which says that age, height and weight do not affect the overall rating of a player.
             </p>
-            <iframe src="https://github.com/shashanksp04/CMSC320_FINAL_PROJECT/blob/main/colab/EDA_Hyp3.html" width="100%" height="600px" frameborder="0"></iframe>
+            <iframe src="EDA_Hyp3.html" width="100%" height="600px" frameborder="0"></iframe>
         </section>
     </section>
 
